   * Fix: MXE compiler warnings (too many commits, ticket:4753)
   * Remove: Unused sensor turret properties in design menu (commit:c6b628e2c0c815467f0799c6c65e2f88d31585d3, ticket:4619)
   * Remove: Do not save showFPS configuration option twice (commit:55c77847e4137c219170fff80d0342a0742499dd, ticket:4645)
 * Modding:
   * Add: Ability to make weapon have no friendly fire with NoFriendlyFire (commit:d75ccdea67fb48f41b370a0c15cea3b6703f344e)
   * Change: Increase capacity of design, build and research screens (ticket:4677, ticket:4721)
 * Balance:
   * Change: Droid ranks are now a brain property and can be upgraded (commit:e760917fef73e172f0149a632a7505303b25080b)
   * Change: HitPoint handling in stats (commit:b1cb129247bca05fb35e50b15e8bedee2d6f4a8a)
   * Change: Jammer tower and droid balancing (commit:0e78612aebdf738677bfb1d5986771667373e354, commit:6f919d4d87b32aa72b8ea65e20460795c8cbbc1b)
   * Fix: Autoreplace cyborg flamer with thermite flamer (commit:8dca9a6bbabd0ff0923a088a9d0ee95d078d8ad3)
   * Fix: Autoreplace cyborg rocket for cyborg scourge missile and heavy gunner for hyper velocity cannon (commit:55f5998c52a0cb2e889aa60c92e79167fc6dc8ed)
   * Fix: Structures not having initial thermal armor (commit:3dd4cdbe548e64ad18c3e06ad427e90fd00c1aa8, ticket:4616)
 * Translation
   * Add: Indonesian (commit:3c050b0cc0a909eaa73d540bffa5224f2631f149)
   * Fix: German translation updates (commit:e5d7e20d49a5737a69365bb5b5e96c959e03ac9d, commit:4bc390378c90e807b31775b5e59c845d0398789e, ticket:4597)
   * Fix: Turkish translation updates (commit:013f6a95415f61232d137cf415b93cb9c8652f93, ticket:4608)
   * Fix: Polish translation update (commit:64bd5a1c5b984e62ddca87d542d53f9ab909cfbf)
   * Fix: Greek translation updates (commit:0490eaa237b0fd8f3a0e8bac722fbb12ff67d5b2, commit:13270626cdfb4304e38e4096a75c25c34998b96c, ticket:3703)
   * Fix: Russian translation updates (commit:19b767af2354a69b1d21199763188f44689c548f, commit:314a90469f38b4391ac17671f323b4b32c91ce5f)